--- a/mysite.html
+++ b/mysite.html
@@ -8,7 +8,7 @@
 
 <center><p>Мое видео на ютубе и сыллка на гитхаб(у сайта открытый код)</p><center>
 
-<center><iframe width="427" height="240" src="https://www.youtube.com/embed/xbZIyrrlGt8" title="Скачать Minecraft 1.7.10 переносная версия" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><center>
+<center><iframe width="427" height="240" src="https://www.youtube.com/embed/JkCINbKn4_E" title="Сайт в блокноте + как добавить видео с ютуба (исходники на гит хабе)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><center>
 
 <a href=twostep.html>Коротко обо  мне</a>
 
